# just-another-cuda-project

./: .gitignore  CMakeLists.txt  README.md
scripts/: benchmark.sh
src/: main.cu
src/common/: cuda_utils.cuh  matrix.cuh  memory.cuh
src/kernels/: gemm_utils.cuh  gemm_v0.cu
tests/kernels/: test_gemm_v1.cu
tests/test_utils/: matrix_generators.cuh  test_helpers.cuh
tools/visualization/: plot_performance.py
